<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context="com.udacity.bakingapp.fragment.RecipeListFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_recipe_list"
        android:layout_margin="@dimen/recycler_view_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
